in code we trust

--- a/www/index.html
+++ b/www/index.html
@@ -1,1 +1,18 @@
-Hello Sluchaynaya Kotya! 🐱
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <style>
+    @import url("https://fonts.googleapis.com/css?family=Roboto+Mono");
+    body {
+      font-size: 14px;
+      font-family: "Roboto Mono";
+    }
+    </style>
+    <title>Kotya Bless You</title>
+  </head>
+  <body>
+    Hello Sluchaynaya Kotya! 🐱
+  </body>
+</html>
