matrices lab added, restructured hole server

--- a/_templates/index_www/index.html
+++ b/_templates/index_www/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" type="text/css" href="index_www/css/index.css">
     <title>Main Page -- kotya.tk</title>
-    <script src="src/walls.js"></script>
-    <script src="src/index.js"></script>
+    <script src="index_www/js/walls.js"></script>
+    <script src="index_www/js/index.js"></script>
   </head>
   <body>
     <div class="main">
