--- a/_templates/zaripova_www/index.html
+++ b/_templates/zaripova_www/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <!--<meta name="viewport" content="width=device-width,initial-scale=1" />-->
-    <link rel="stylesheet" type="text/css" href="css/zaripova.css">
+    <link rel="stylesheet" type="text/css" href="zaripova_www/css/zaripova.css">
     <title>Zaripova Generator -- kotya.tk</title>
-    <script src="src/romanizer.js"></script>
+    <script src="zaripova_www/js/romanizer.js"></script>
     <script>
       (function(){
         function onload() {
@@ -36,7 +36,7 @@
   </head>
   <body>
     <div class="header content">
-      <img src="img/zaripova-logo.png"></img>
+      <img src="zaripova_www/img/zaripova-logo.png"></img>
       <form method="get">
         <input class="textarea" type="text" name="page" id="textarea" />
         <input class="button" type="submit" value="Перейти">
