--- a/_templates/www_wav/index.html
+++ b/_templates/www_wav/index.html
@@ -2,8 +2,8 @@
 <head>
   <title>wav generator</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="wav_www/css/index.css">
-  <script src="wav_www/js/index.js"></script>
+  <link rel="stylesheet" type="text/css" href="www_wav/css/index.css">
+  <script src="www_wav/js/index.js"></script>
 </head>
 <body>
 
