--- a/_templates/www_cats-falling/index.html
+++ b/_templates/www_cats-falling/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="www_cats-falling/css/index.css">
     <title>Cats Falling</title>
-    <script src="www_cats-falling/js/SECURE_index.js"></script>
+    <script src="www_cats-falling/js/index.js"></script>
   </head>
   
   <body>
     <div id="cats-wrapper" class="cats-wrapper"></div>
-    <div class="title">Kotya.Tk</div>
+    <!--<div class="title">Kotya.Tk</div>-->
   </body>
 
 </html>
