--- a/_templates/index/index.html
+++ b/_templates/index/index.html
@@ -30,7 +30,7 @@
         <a href="https://vk.com/piturd98">Sluchaynaya Kotya</a> (c)<br>Created: Aug 2018<br>Last update: {{ uptime }}
       </div>
       <div class="content">
-        {% for proj in projs %}
+        {% for proj in projects %}
           <div class="proj">
             <div><a href="{{ proj['path'] }}">{{ proj['path'] }}</a></div>
             <div class="proj-disc">{{ proj['disc'] }}</div>
