--- a/_templates/www_valentine/index.html
+++ b/_templates/www_valentine/index.html
@@ -6,5 +6,7 @@
   <script src="www_valentine/js/index.js"></script>
 </head>
 <body>
+  valentine`s day, 2019
+  <div class="values"></div>
 </body>
 </html>
